# Bots

./: .gitignore
default-backrun/: Dockerfile  package.json  tsconfig.json
default-backrun/src/: constants.ts  encoders.ts  general.ts  loader.ts  main.ts  routeManager.ts  types.ts
default-backrun/src/abis/: index.js  optimizerExec.json
default-backrun/src/loading/: fantom.ts  polygon.ts  xdai.ts
default-backrunner-rust/: Cargo.toml  Dockerfile
default-backrunner-rust/abis/: dfynRouter.json  optimizerExec.json  paraswapRouter.json  uniswapRouter.json
default-backrunner-rust/src/: main.rs
default-backrunner-rust/src/helpers/: changed_pool.rs  encoder.rs  mod.rs  process_pending.rs  routes.rs  wallet.rs  web3.rs
rust_benchmark/: Cargo.toml
rust_benchmark/benches/: my_benchmark.rs
rust_benchmark/src/: main.rs
target-backrun-js/: package.json
target-backrun-js/src/: bundleBidder.ts  changedPools.ts  constants.ts  encoders.ts  general.ts  loader.ts  main.ts  routeBuilder.ts  routeManager.ts  token.ts  types.ts  walletLoader.ts
target-backrunner-rust/: .gitignore  Cargo.toml  Dockerfile  package.json
target-backrunner-rust/abis/: firebirdRouter.json  nodeTestAbi.json  optimizerExec.json
target-backrunner-rust/src/: main.rs
target-backrunner-rust/src/helpers/: abi.rs  changed_pool.rs  encoder.rs  process_pending.rs  routes.rs  web3.rs
target-backrunner-rust/src/loaders/: fantom.rs  mainnet.rs  mod.rs  polygon.rs  xdai.rs
target-backrunner-rust/src/types/: enums.rs  exchange.rs  immutable_state.rs  mutable_state.rs  token.rs  wallet.rs
(+13 files in other folders)
