[package]
name = "target-backrunner-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
web3 = { version = "0.16.0", default-features = false, features = ["ws-tokio", "signing"] }
secp256k1 = { version = "0.20", features = ["recovery"]}
tokio = { version = "1.8.1", features = ["full"] }
ethereum_abi = "0.3.0"
ethabi = "14.1.0" 
rand = "0.8.4"
clarity = "0.4.12"
serde_json = "1.0"
ethabi-contract = "11.0.0"
ethabi-derive = "14.1.0"
primitive-types = "0.8.0"
futures = "0.3.15"